force-app/main/default/objects/Meeting_Visit_Note__c/Meeting_Visit_Note__c.object-meta.xml
<CustomObject>
    <label>Meeting/Visit Note</label>
    <nameField>
        <label>Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting/Visit Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>