force-app/main/default/objects/Meeting_Visit_Note__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting/Visit Notes</relationshipLabel>
    <relationshipName>Meeting_Visit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>