force-app/main/default/objects/Meeting_Visit_Note__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Meeting/Visit Notes</relationshipLabel>
    <relationshipName>Meeting_Visit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>