force-app/main/default/objects/Meeting_Visit_Note__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meeting/Visit Notes</relationshipLabel>
    <relationshipName>Meeting_Visit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>