force-app/main/default/objects/Meeting_Visit_Note__c/fields/Created_by_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created by Email</label>
    <type>Checkbox</type>
</CustomField>