force-app/main/default/objects/Meeting_Visit_Note__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <formula>Owner:User.Manager.FirstName&amp;&quot; &quot;&amp;Owner:User.Manager.LastName</formula>
    <label>Manager</label>
    <type>Text</type>
</CustomField>