force-app/main/default/objects/Meeting_Visit_Note__c/fields/Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>