force-app/main/default/objects/Meeting_Visit_Note__c/fields/Meeting_Note__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Note__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>