force-app/main/default/objects/Meeting_Visit_Note__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meeting/Visit Notes</relationshipLabel>
    <relationshipName>Meeting_Visit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>