force-app/main/default/objects/Meeting_Visit_Note__c/fields/Original_Email_Sender__c.field-meta.xml
<CustomField>
    <fullName>Original_Email_Sender__c</fullName>
    <label>Original Email Sender</label>
    <type>Email</type>
</CustomField>