force-app/main/default/objects/Meeting_Visit_Note__c/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <label>Owner Active?</label>
    <type>Checkbox</type>
</CustomField>