force-app/main/default/objects/Meeting_Visit_Note__c/fields/Owner_Department__c.field-meta.xml
<CustomField>
    <fullName>Owner_Department__c</fullName>
    <label>Owner Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>