force-app/main/default/objects/Meeting_Visit_Note__c/fields/Related_POPSA__c.field-meta.xml
<CustomField>
    <fullName>Related_POPSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related POPSA</label>
    <referenceTo>POPSA__c</referenceTo>
    <relationshipLabel>Meeting/Visit Notes</relationshipLabel>
    <relationshipName>Meeting_Visit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>