force-app/main/default/objects/Meeting_Visit_Note__c/fields/Related_to_POPSA__c.field-meta.xml
<CustomField>
    <fullName>Related_to_POPSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related to POPSA?</label>
    <type>Checkbox</type>
</CustomField>