force-app/main/default/objects/Meeting_Visit_Note__c/recordTypes/Logged_Calls.recordType-meta.xml
<RecordType>
    <fullName>Logged_Calls</fullName>
    <active>true</active>
    <label>Logged Calls</label>
</RecordType>