force-app/main/default/objects/Meeting_Visit_Note__c/recordTypes/Meeting_Note.recordType-meta.xml
<RecordType>
    <fullName>Meeting_Note</fullName>
    <active>true</active>
    <label>Meeting Note</label>
</RecordType>